--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -22,7 +22,9 @@ body {
     margin:0px;
 }
 #navbar-title {
+    color :#428bca !important;
     font-size:1.3em;
+    Font-Weight: Bold;
 }
 #navbar-right-part {
     float:right;
@@ -62,6 +64,7 @@ body {
     border-radius:15px;
 }
 #navbar-app {
+    color :#428bca !important;
     font-size:200%;
 }
 i.glyphicon {
@@ -83,7 +86,8 @@ i.glyphicon {
     background-color: rgb(224,53,89) !important;
 }
 .blue-header{
-    background-color :#428bca;
+    /*background-color :#428bca;*/
+background-colo: rgb(255, 255, 255);
 }
 
 
@@ -218,4 +222,14 @@ i.glyphicon {
 
 #header-component{
     height:65px;
+}
+
+.pictureLogin{
+    background: url("/img/background/loginPage.png") no-repeat center center fixed;
+    background-size: cover;
+    padding-bottom:1000px;
+    /*margin:0;*/
+    /*padding:0;*/
+    width: 100%;
+    height: 100%;
 }
