[US#design] color sub-title and navbar

--- a/src/main/webapp/css/signInSignUp.css
+++ b/src/main/webapp/css/signInSignUp.css
@@ -98,7 +98,7 @@
 }
 .tab-group .active a {
     background: #428bca;
-    /*color: #ffffff;*/
+    color: #ffffff;
 }
 
 .tab-content > div:last-child {
