[US#design] design for collab page (resgisterTrainingCollab)

--- a/src/main/webapp/css/admin/addTrainingTopic.css
+++ b/src/main/webapp/css/admin/addTrainingTopic.css
@@ -1072,4 +1072,12 @@ a.boxclose{
     content: "×";
 }
 
+.buttonForm {
+    width:80%;
+    background-color: #3498db;
+    border: none;
+    border-radius:0;
+    text-align: center;
+}
+
 
