--- a/src/main/webapp/css/admin/assignCollaborator.css
+++ b/src/main/webapp/css/admin/assignCollaborator.css
@@ -14,7 +14,7 @@
     font-size:13px;
 }
 
-#assignCollaboratorContainer legend {
+.orangeLegend {
     right:1px;
     background-color: #ff9200;
 }
