--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -7,6 +7,12 @@ body {
     background: #eeefee;
 }
 
+.whiteBlock {
+    background: #ffffff;
+    margin-bottom:20px;
+    padding: 20px 176px 20px 0;
+}
+
 #wrap {
  margin-bottom:60px;
 }
@@ -98,6 +104,10 @@ background-colo: rgb(255, 255, 255);
     z-index: 1000;
     left: 0;
     right: 0;
+}
+
+.left {
+    float: right;
 }
 
 .dialog-bg {
@@ -224,14 +234,12 @@ background-colo: rgb(255, 255, 255);
     background: url("/img/background/loginPage.png") no-repeat center center fixed;
     background-size: cover;
     padding-bottom:1000px;
-    /*margin:0;*/
-    /*padding:0;*/
     width: 100%;
     height: 100%;
 }
 
 .collabPage {
-    margin-top: 100px;
+    padding-top: 50px;
 }
 
 #navbar-subtitle {
