[US#design] design collab page: change trainingToCome

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -239,7 +239,8 @@ background-colo: rgb(255, 255, 255);
 }
 
 .collabPage {
-    padding-top: 50px;
+    padding-top: 28px;
+    padding-bottom: 29px;
 }
 
 #navbar-subtitle {
