--- a/src/main/webapp/css/collab/registerTrainingCollaborator.css
+++ b/src/main/webapp/css/collab/registerTrainingCollaborator.css
@@ -1,7 +1,8 @@
 #trainingContainer {
     box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.2);
     border-radius: 3px 3px 0 0;
-    width: 100%; height: 43em;
+    width: 100%;
+    height: 44.9em;
     overflow-y:hidden;
     overflow-x:hidden;
     z-index: -1;
