[develop] text for status_icon
right size for pending status

--- a/src/main/webapp/css/collab/registerTrainingCollaborator.css
+++ b/src/main/webapp/css/collab/registerTrainingCollaborator.css
@@ -119,7 +119,12 @@ button + p {
     float:right;
     width: 25px;
     position: relative;
-    bottom: 13px;
+    bottom: 23px;
+}
+.text_status {
+    position: absolute;
+    right: 3px;
+    font-style: italic;
 }
 div.stars {
     width: 270px;
