[develop] Retrait des scroll sur les  différentes pages.

--- a/src/main/webapp/css/admin/trainingRankingByOpinions.css
+++ b/src/main/webapp/css/admin/trainingRankingByOpinions.css
@@ -1,7 +1,7 @@
 #rankingTraining {
     box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.2);
     border-radius: 3px 3px 0 0;
-    height:486px;
+    height: 30.9em;
     width: 100%;
     padding:20px;
 }
